# omnivoice-web

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml
apps/api/: pyproject.toml  run-api.sh
apps/api/app/: __init__.py  auth.py  config.py  db.py  default_speakers.py  job_runner.py  main.py  models.py  provider_settings.py  schemas.py  storage.py
apps/api/app/engine/: __init__.py  omnivoice_adapter.py  qwen3_tts_adapter.py  registry.py
apps/api/app/routers/: assets.py  elevenlabs_compat.py  gemini_compat.py  generations.py  health.py  jobs.py  meta.py  openai_compat.py  providers.py  speakers.py  tts.py
apps/api/scripts/: engine_cli.py  qwen3_tts_cli.py
apps/web/: next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/api-docs/: page.tsx
apps/web/src/app/history/: page.tsx
apps/web/src/app/settings/: page.tsx
apps/web/src/app/speakers/: page.tsx
apps/web/src/app/studio/: page.tsx
apps/web/src/components/: audio-player.tsx  code-block.tsx  endpoint-card.tsx  sidebar.tsx  studio-form.tsx
apps/web/src/lib/: api.ts  types.ts
apps/web/src/styles/: globals.css
docs/: 2026-04-16-long-podcast-voice-clone-resolution.md  2026-04-16-voice-clone-mps-sigkill-investigation.md  2026-04-17-async-jobs-and-podcast-api.md  2026-04-17-elevenlabs-compatibility.md  2026-04-17-engine-router-and-qwen3-plan.md  2026-04-18-a100-qwen3-vllm-validation.md  2026-04-18-provider-management.md  2026-04-18-qwen-customvoice-base-routing.md  PRD.md
scripts/: bootstrap.sh  dev-api.sh  dev.sh
